# FanfictionProject

./: .gitignore  README.md  README_English.md  README_Russian.md  pyproject.toml
analysis/: data.py  fanfiction_project.ipynb  features.py  visualization.py
parser/: main.py  processing.py
web/: app.py
